--- a/index.html
+++ b/index.html
@@ -102,20 +102,23 @@
                 <div class="project-slider">
                     <div class="project-slide-wrapper">
                         <div class="project-slide active" data-project="1">
+                            <h3 class="project-title">[UAV System Eng] Post Flight UAV Diagnostic Analyzer</h3>
                             <div class="project-preview">
                                 <div class="project-images-slider">
                                     <img src="img/projects/uav-1.jpg" alt="UAV Project 1" class="project-image active">
                                     <img src="img/projects/uav-2.jpg" alt="UAV Project 2" class="project-image">
                                     <img src="img/projects/uav-3.jpg" alt="UAV Project 3" class="project-image">
+                                    <img src="img/projects/uav-1.jpg" alt="UAV Project 4" class="project-image">
                                 </div>
-                                <button class="slider-nav prev" onclick="previousProjectImage(1)">‹</button>
-                                <button class="slider-nav next" onclick="nextProjectImage(1)">›</button>
+                                <button class="slider-nav prev">‹</button>
+                                <button class="slider-nav next">›</button>
                             </div>
-                            <h3 class="project-title">[UAV System Eng] Post Flight UAV Diagnostic Analyzer</h3>
                             <div class="project-image-indicators">
+                                <div class="indicator-line"></div>
                                 <span class="image-dot active" onclick="showProjectImage(1, 0)"></span>
                                 <span class="image-dot" onclick="showProjectImage(1, 1)"></span>
                                 <span class="image-dot" onclick="showProjectImage(1, 2)"></span>
+                                <span class="image-dot" onclick="showProjectImage(1, 3)"></span>
                             </div>
                             <div class="project-tags">
                                 <span class="tag">Python</span>
@@ -126,20 +129,23 @@
                         </div>
 
                         <div class="project-slide" data-project="2">
+                            <h3 class="project-title">[Frontend] Hollow Knight Fanmade Web</h3>
                             <div class="project-preview">
                                 <div class="project-images-slider">
                                     <img src="img/projects/hollow-1.jpg" alt="Hollow Knight 1" class="project-image active">
                                     <img src="img/projects/hollow-2.jpg" alt="Hollow Knight 2" class="project-image">
                                     <img src="img/projects/hollow-3.jpg" alt="Hollow Knight 3" class="project-image">
+                                    <img src="img/projects/hollow-1.jpg" alt="Hollow Knight 4" class="project-image">
                                 </div>
-                                <button class="slider-nav prev" onclick="previousProjectImage(2)">‹</button>
-                                <button class="slider-nav next" onclick="nextProjectImage(2)">›</button>
+                                <button class="slider-nav prev">‹</button>
+                                <button class="slider-nav next">›</button>
                             </div>
-                            <h3 class="project-title">[Frontend] Hollow Knight Fanmade Web</h3>
                             <div class="project-image-indicators">
+                                <div class="indicator-line"></div>
                                 <span class="image-dot active" onclick="showProjectImage(2, 0)"></span>
                                 <span class="image-dot" onclick="showProjectImage(2, 1)"></span>
                                 <span class="image-dot" onclick="showProjectImage(2, 2)"></span>
+                                <span class="image-dot" onclick="showProjectImage(2, 3)"></span>
                             </div>
                             <div class="project-tags">
                                 <span class="tag">HTML</span>
@@ -149,20 +155,23 @@
                         </div>
 
                         <div class="project-slide" data-project="3">
+                            <h3 class="project-title">[UI/UX] Roomify : System Informasi Kos Berbasis Web</h3>
                             <div class="project-preview">
                                 <div class="project-images-slider">
                                     <img src="img/projects/roomify-1.jpg" alt="Roomify 1" class="project-image active">
                                     <img src="img/projects/roomify-2.jpg" alt="Roomify 2" class="project-image">
                                     <img src="img/projects/roomify-3.jpg" alt="Roomify 3" class="project-image">
+                                    <img src="img/projects/roomify-1.jpg" alt="Roomify 4" class="project-image">
                                 </div>
-                                <button class="slider-nav prev" onclick="previousProjectImage(3)">‹</button>
-                                <button class="slider-nav next" onclick="nextProjectImage(3)">›</button>
+                                <button class="slider-nav prev">‹</button>
+                                <button class="slider-nav next">›</button>
                             </div>
-                            <h3 class="project-title">[UI/UX] Roomify : System Informasi Kos Berbasis Web</h3>
                             <div class="project-image-indicators">
+                                <div class="indicator-line"></div>
                                 <span class="image-dot active" onclick="showProjectImage(3, 0)"></span>
                                 <span class="image-dot" onclick="showProjectImage(3, 1)"></span>
                                 <span class="image-dot" onclick="showProjectImage(3, 2)"></span>
+                                <span class="image-dot" onclick="showProjectImage(3, 3)"></span>
                             </div>
                             <div class="project-tags">
                                 <span class="tag">Figma</span>
@@ -172,20 +181,23 @@
                         </div>
 
                         <div class="project-slide" data-project="4">
+                            <h3 class="project-title">[Game Dev] Little Cat Time Adventure</h3>
                             <div class="project-preview">
                                 <div class="project-images-slider">
                                     <img src="img/projects/cat-1.jpg" alt="Little Cat 1" class="project-image active">
                                     <img src="img/projects/cat-2.jpg" alt="Little Cat 2" class="project-image">
                                     <img src="img/projects/cat-3.jpg" alt="Little Cat 3" class="project-image">
+                                    <img src="img/projects/cat-1.jpg" alt="Little Cat 4" class="project-image">
                                 </div>
-                                <button class="slider-nav prev" onclick="previousProjectImage(4)">‹</button>
-                                <button class="slider-nav next" onclick="nextProjectImage(4)">›</button>
+                                <button class="slider-nav prev">‹</button>
+                                <button class="slider-nav next">›</button>
                             </div>
-                            <h3 class="project-title">[Game Dev] Little Cat Time Adventure</h3>
                             <div class="project-image-indicators">
+                                <div class="indicator-line"></div>
                                 <span class="image-dot active" onclick="showProjectImage(4, 0)"></span>
                                 <span class="image-dot" onclick="showProjectImage(4, 1)"></span>
                                 <span class="image-dot" onclick="showProjectImage(4, 2)"></span>
+                                <span class="image-dot" onclick="showProjectImage(4, 3)"></span>
                             </div>
                             <div class="project-tags">
                                 <span class="tag">Unity</span>
