--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Muhammad Umar Faiz Alfa Rizqy - Portfolio</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Abel&family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Abel&family=Montserrat:wght@400;700&family=Cormorant+Garamond:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -95,7 +95,10 @@
 
             <!-- Projects Section -->
             <section class="projects-section page-section" id="projects" data-page="2">
-            <div class="section-title">Projects</div>
+            <div class="section-title-wrapper">
+                <div class="section-title">Projects</div>
+                <img src="img/under-projects.png" alt="" class="section-underline">
+            </div>
             
             <div class="projects-content">
                 <!-- Project Slider -->
